--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Eren C. K&#305;z&#305;lda&#287
 <br>
 <i>Approximation, Randomization, and Combinatorial Optimization. Algorithms and Techniques (APPROX/RANDOM) 2025</i>
 <br>
-<a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.APPROX/RANDOM.2025.48" target="_blank">[Paper]</a> <a href= "files/APPROX/RANDOM_2025.pdf" target="_blank">[Slides]</a> 
+<a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.APPROX/RANDOM.2025.48" target="_blank">[Paper]</a> <a href= "files/RANDOM2025.pdf" target="_blank">[Slides]</a> 
 </p>
 
   <p>
