--- a/index.html
+++ b/index.html
@@ -39,6 +39,26 @@ My research is a mix of probability, statistics and data science, and computer s
  <h2>Journals and Full Conference Papers</h2>
 
   <p>
+<strong>Planted Number Partitioning Problem</strong>
+<br>
+Eren C. K&#305;z&#305;lda&#287
+<br>
+<i> Algorithmic Learning Theory (ALT), 2026</i>
+<br>
+<a href="https://arxiv.org/abs/2309.15115" target="_blank">[Paper]</a> 
+</p>
+
+   <p>
+<strong>Large Average Subtensor Problem: Ground-State, Algorithms, and Algorithmic Barriers</strong>
+<br>
+Abhishek Hegade K. R., Eren C. K&#305;z&#305;lda&#287
+<br>
+<i> Algorithmic Learning Theory (ALT), 2026</i>
+<br>
+<a href="https://arxiv.org/abs/2506.17118" target="_blank">[Paper]</a> 
+</p>
+
+  <p>
 <strong>Shattering in the Ising p-Spin Glass Model</strong>
 <br>
 David Gamarnik, Aukosh Jagannath, Eren C. K&#305;z&#305;lda&#287
@@ -175,16 +195,6 @@ David Gamarnik, Eren C. K&#305;z&#305;lda&#287, Lutz Warnke
 <a href="https://arxiv.org/abs/2504.11450" target="_blank">[Paper]</a> 
 </p>
 
-  <p>
-<strong>Large Average Subtensor Problem: Ground-State, Algorithms, and Algorithmic Barriers</strong>
-<br>
-Abhishek Hegade K. R., Eren C. K&#305;z&#305;lda&#287
-<br>
-<i>Under review, 2025+</i>
-<br>
-<a href="https://arxiv.org/abs/2506.17118" target="_blank">[Paper]</a> 
-</p>
-
 
  <p>
 <strong>Sharp Thresholds for the Overlap Gap Property: Ising p-Spin Glass and Random k-SAT</strong>
@@ -196,15 +206,6 @@ Eren C. K&#305;z&#305;lda&#287
 <a href="https://arxiv.org/abs/2309.09913" target="_blank">[Paper]</a> 
 </p>
 
- <p>
-<strong>Planted Number Partitioning Problem</strong>
-<br>
-Eren C. K&#305;z&#305;lda&#287
-<br>
-<i>Under review, 2025+</i>
-<br>
-<a href="https://arxiv.org/abs/2309.15115" target="_blank">[Paper]</a> 
-</p>
 
 <p>
 <strong>Symmetric Binary Perceptron with Random Labels: Capacity, Universality, and Overlap Gap Property</strong>
